# protols

./: Cargo.toml  LICENSE  README.md  build.rs  protols.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
sample/: everything.proto  simple.proto  test.proto  wellknown.proto
sample/google/protobuf/: any.proto
src/: docs.rs  lsp.rs  main.rs  nodekind.rs  parser.rs  protoc.rs  registry.rs  server.rs  simple.proto  state.rs  utils.rs
src/actions/: hover.rs
src/config/: mod.rs  workspace.rs
src/config/input/: protols-valid.toml
src/config/snapshots/: protols__config__workspace__test__get_for_workspace-2.snap  protols__config__workspace__test__get_for_workspace.snap  protols__config__workspace__test__workspace.snap
src/context/: hoverable.rs  jumpable.rs  mod.rs
src/core/: ast.rs  context.rs  file.rs  mod.rs  query.rs  symbol.rs  utils.rs
src/core/snapshots/: protols__core__file__test__symbols.snap
src/core/test/: import.proto  package_name.proto
src/docs/builtin/: double.md  fixed64.md  float.md  sint64.md
src/docs/wellknown/: Any.md  Api.md  BoolValue.md  Duration.md  FloatValue.md  Int64Value.md  ListValue.md  NullValue.md  SourceContext.md  StringValue.md  Syntax.md  Type.md  UInt32Value.md  UInt64Value.md
src/formatter/: clang.rs  mod.rs
src/formatter/input/: empty.xml  replacement.xml  test.proto  test_cyrillic.proto
src/formatter/snapshots/: protols__formatter__clang__test__offset_to_position-2.snap  protols__formatter__clang__test__offset_to_position-3.snap  protols__formatter__clang__test__offset_to_position-4.snap  protols__formatter__clang__test__offset_to_position.snap  protols__formatter__clang__test__offset_to_position_cyrillic-2.snap  protols__formatter__clang__test__offset_to_position_cyrillic-3.snap  protols__formatter__clang__test__offset_to_position_cyrillic.snap  protols__formatter__clang__test__reading_empty_xml.snap  protols__formatter__clang__test__reading_xml.snap
src/parser/: definition.rs  diagnostics.rs  docsymbol.rs  hover.rs  mod.rs  nodekind.rs  rename.rs  tree.rs
src/parser/input/: test_can_rename.proto  test_collect_parse_error1.proto  test_collect_parse_error2.proto  test_document_symbols.proto  test_filter.proto  test_goto_definition.proto  test_hover.proto  test_reference.proto  test_rename.proto
src/parser/snapshots/: protols__parser__definition__test__goto_definition-2.snap  protols__parser__definition__test__goto_definition.snap  (+24 more)
src/wellknown/: mod.rs
src/workspace/: definition.rs  hover.rs  mod.rs  rename.rs  workspace_symbol.rs
src/workspace/input/: a.proto  (+2 more)
(+61 files in other folders)
