[package]
name = "protols"
description = "Language server for proto3 files"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/coder3101/protols"
repository = "https://github.com/coder3101/protols"
readme = "README.md"
keywords = ["lsp", "proto3"]

exclude = ["assets/*", "sample/*"]

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["time", "full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.22.6"
tracing-appender = "0.2.3"
protols-tree-sitter-proto = "0.1.0"
