[package]
name = "protols"
description = "Language server for proto3 files"
version = "0.2.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/coder3101/protols"
repository = "https://github.com/coder3101/protols"
readme = "README.md"
keywords = ["lsp", "proto"]

exclude = ["assets/*", "sample/*"]

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["time", "full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tower = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.25.2"
tracing-appender = "0.2.3"
tree-sitter-proto = "0.2.0"
walkdir = "2.5.0"
hard-xml = "1.36.0"
tempfile = "3.12.0"
serde = { version = "1.0.209", features = ["derive"] }
basic-toml = "0.1.9"
pkg-config = "0.3.31"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
