[package]
name = "protols"
description = "Language server for proto3 files"
version = "0.12.8"
edition = "2024"
license = "MIT"
homepage = "https://github.com/coder3101/protols"
repository = "https://github.com/coder3101/protols"
readme = "README.md"
keywords = ["lsp", "proto"]

exclude = ["assets/*", "sample/*"]

[dependencies]
async-lsp = { version = "0.2", features = ["tokio"] }
futures = "0.3"
tokio = { version = "1.47", features = ["time", "full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.25"
tracing-appender = "0.2"
tree-sitter-proto = "0.3"
walkdir = "2.5"
hard-xml = "1.41"
tempfile = "3.21"
serde = { version = "1", features = ["derive"] }
basic-toml = "0.1"
pkg-config = "0.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
